# panelz

./: .gitignore  Cargo.toml
etc/: fsystem.json  user.json
panelz/: Cargo.toml
panelz-cli/: Cargo.toml
panelz-core/: Cargo.toml
panelz-core/src/: filesys.rs  infosys.rs  lib.rs  usersys.rs
panelz-core/src/fsystem/: manager.rs  mod.rs
panelz-core/src/sysinfo/: manager.rs  mod.rs
panelz-core/src/usersys/: manager.rs  mod.rs
panelz-core/src/zplugin/: mod.rs
panelz-ui/: README.md  package.json
panelz/src/: cfgtable.rs  main.rs
panelz/src/globalmgr/: mod.rs
panelz/src/handlers/: fsystem.rs  mod.rs  sysinfo.rs  usersys.rs
panelz/src/providers/: fspvdr.rs  mod.rs  syspvdr.rs  usrpvdr.rs
