[workspace]
members = ["panelz", "panelz-cli", "panelz-core"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["cileamzh<cileamzh@gmail.com>"]
description = "A high-performance panel toolset written in Rust"
repository = "https://github.com/cileamzh/panelz"
license = "GNU General Public License v3.0"
